--- a/style.css
+++ b/style.css
@@ -1,48 +1,95 @@
-.titulo-principal{
-    padding-left: 30px;
+header {
+    background-color: #bbbb;
+    font-family: 'Roboto Slab', serif;
+    font-size: 700;
+    padding: 20px 0; 
 }
 
-.principal {
-    background-color: #cccc;
-    padding: 20px;
+.contenedor {
+    margin: 0 auto;
+    position: relative;
+    width: 940px;
 }
 
-.titulo-centralizado {
-    text-align: center;
+nav {
+    position: absolute;
+    right: 0;
+    top: 110px;
 }
 
-em strong {
-    color: red;
+nav li {
+    display: inline;
+    margin-left: 15px;
 }
 
-p {
-    text-align: center;
-}
-
-.banner {
-    width: 100%;
-}
-
-.mision {
+nav a {
+    color: black;
     font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
-.diferenciales {
-    background-color: #FFFFFF;
-    padding: 30px;
+nav a:hover {
+    color: #c78c19;
+    text-decoration: underline;
 }
 
-.items {
-    font-style: italic;
+.productos {
+    margin: 0 auto;
+    padding: 50px;
+    width: 900px;
 }
 
-ul {
-    display: inline-block; 
-    margin-right: 15%;
+.productos li {
+    border: black 2px solid;
+    border-radius: 10px;
+    box-sizing: border-box; /*el borde de cada uno de los items será el límite del espacio que es definido*/
+    display: inline-block;
+    margin: 0 1.5%;
+    padding: 30px 15px;
+    text-align: center;
     vertical-align: top;
-    width: 20%;
+    width: 30%;
 }
 
-.imgDiferencial {
-    width: 50%;
+.productos li:hover {
+    border-color: #c78c19;
+    
+}
+
+.productos li:active {
+    border-color: #088c19;
+}
+
+.productos h2 {
+    font-family: 'Roboto Slab', serif;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.productos li:hover h2 {
+    font-size: 33px;
+}
+
+.producto-descripcion {
+    font-family: 'Chivo Mono', monospace;
+    font-size: 18px;
+}
+
+.producto-precio {
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 10px;
+}
+
+footer {
+    background: url(/img/bg.jpg);
+    color: lightgray;
+    font-family: 'Roboto Slab', serif;
+    font-size: 10px;
+    margin: 20px;
+    padding: 40px;
+    text-align: center;
 }
