cambios en contacto.html y style.css

--- a/style.css
+++ b/style.css
@@ -93,3 +93,30 @@ footer {
     padding: 40px;
     text-align: center;
 }
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label, form p {
+    display: block;
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.input-padron {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
