--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ td, th {
 
 .principal p {
     font-family: 'Roboto Slab', serif;
+    font-weight: 300;
     margin: 0 0 1em;
 }
 
@@ -184,9 +185,24 @@ td, th {
     float: left;
     margin: 0 20px;
     width: 120px;
-    
+}
+
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p {
+    font-family: 'Roboto Slab', serif;
+    font-weight: 300;
+    margin: 0 0 2em;
+    text-align: center;
 }
 
 .imgDiferencial {
     width: 60%;
+}
+
+.video {
+    width: 560px;
+    margin: 1em auto;
 }
