--- a/style.css
+++ b/style.css
@@ -231,10 +231,40 @@ td, th {
 }
 
 .imagen-diferenciales {
+    box-shadow: 0px 0px 14px 8px black;
+    transition: 400ms;
     width: 60%;
+}
+
+.imagen-diferenciales:hover {
+    opacity: .3;
 }
 
 .video {
     width: 560px;
     margin: 1em auto;
+}
+
+@media screen and (max-width: 480px) {
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+        text-align: center;
+    }
+
+    .contenedor, .principal, .mapa-contenido, .contenido-diferenciales, .video {
+        width: auto;
+    }
+
+    .contenido-diferenciales{
+        flex-direction: column;
+    }
+
+    .lista-diferenciales, .imagen-diferenciales {
+        margin-bottom: 15px;
+        width: 100%;
+    }
 }
